fix overlapping components

--- a/src/components/Navbar/NavBar.module.css
+++ b/src/components/Navbar/NavBar.module.css
@@ -1,5 +1,5 @@
 nav {
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   z-index: 50;
   display: flex;
